// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zodToMongoSchema > should convert email_denied schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email": {
      "bsonType": "string",
      "description": "L'email rejetée",
    },
    "reason": {
      "bsonType": "string",
      "enum": [
        "unsubscribe",
      ],
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "email",
    "reason",
    "created_at",
  ],
}
`;

exports[`zodToMongoSchema > should convert email_events schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "created_at": {
      "bsonType": "date",
    },
    "delivered_at": {
      "anyOf": [
        {
          "bsonType": "date",
        },
        {
          "bsonType": "null",
        },
      ],
    },
    "email": {
      "bsonType": "string",
      "description": "Addresse email",
    },
    "errors": {
      "bsonType": "array",
      "items": {
        "additionalProperties": false,
        "bsonType": "object",
        "properties": {
          "message": {
            "bsonType": "string",
          },
          "type": {
            "bsonType": "string",
            "enum": [
              "fatal",
              "soft_bounce",
              "hard_bounce",
              "complaint",
              "invalid_email",
              "blocked",
              "error",
            ],
          },
        },
      },
    },
    "messageId": {
      "bsonType": [
        "string",
        "null",
      ],
    },
    "opened_at": {
      "anyOf": [
        {
          "bsonType": "date",
        },
        {
          "bsonType": "null",
        },
      ],
    },
    "template": {
      "anyOf": [
        {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "name": {
              "bsonType": "string",
            },
            "resetPasswordToken": {
              "bsonType": "string",
            },
            "to": {
              "bsonType": "string",
            },
          },
          "required": [
            "name",
            "to",
            "resetPasswordToken",
          ],
        },
      ],
    },
    "updated_at": {
      "bsonType": "date",
    },
  },
  "required": [
    "_id",
    "email",
    "template",
    "created_at",
    "updated_at",
    "opened_at",
    "delivered_at",
    "messageId",
    "errors",
  ],
}
`;

exports[`zodToMongoSchema > should convert sessions schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "expires_at": {
      "bsonType": "date",
      "description": "Date d'expiration",
    },
    "token": {
      "bsonType": "string",
      "description": "Token de la session",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "token",
    "updated_at",
    "created_at",
    "expires_at",
  ],
}
`;

exports[`zodToMongoSchema > should convert source.acce schema 1`] = `
{
  "anyOf": [
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "academie": {
              "anyOf": [
                {
                  "bsonType": "string",
                  "pattern": "^\\\\d{2}$",
                },
                {
                  "bsonType": "null",
                },
              ],
            },
            "academie_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "adresse_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appariement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appariement_complement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appellation_officielle": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "boite_postale_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_financiere": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_financiere_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_juridique": {
              "bsonType": "string",
            },
            "categorie_juridique_libe": {
              "bsonType": "string",
            },
            "code_postal_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "commune": {
              "bsonType": "string",
            },
            "commune_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "contrat_etablissement": {
              "bsonType": "string",
              "enum": [
                "99",
                "10",
                "30",
                "20",
                "50",
                "31",
                "21",
                "!!",
                "40",
                "41",
              ],
            },
            "contrat_etablissement_libe": {
              "bsonType": "string",
              "enum": [
                "Sans objet",
                "Hors contrat",
                "Contrat d'association pour toutes les classes",
                "Contrat simple pour toutes les classes",
                "Reconnu par l'Etat",
                "Contrat d'association pour une partie des classes",
                "Contrat simple pour une partie des classes",
                "Inconnu du gestionnaire",
                "Contrats simple et d'association pour toutes les classes",
                "Contrats simple et d'association pour une partie des classes",
              ],
            },
            "coordonnee_x": {
              "bsonType": [
                "number",
                "null",
              ],
            },
            "coordonnee_y": {
              "bsonType": [
                "number",
                "null",
              ],
            },
            "date_derniere_mise_a_jour": {
              "bsonType": "string",
            },
            "date_fermeture": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_geolocalisation": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_ouverture": {
              "bsonType": "string",
            },
            "denomination_principale": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "departement_insee_3": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "departement_insee_3_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "etat_etablissement": {
              "bsonType": "string",
              "enum": [
                "1",
                "2",
                "3",
                "4",
              ],
            },
            "etat_etablissement_libe": {
              "bsonType": "string",
              "enum": [
                "Ouvert",
                "À fermer",
                "À ouvrir",
                "Fermé",
              ],
            },
            "etat_sirad_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "hebergement_etablissement": {
              "bsonType": "string",
            },
            "hebergement_etablissement_libe": {
              "bsonType": "string",
            },
            "lieu_dit_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localisation": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localisation_complement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localite_acheminement_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "mel_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "mention_distribution": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ministere_tutelle": {
              "bsonType": "string",
              "pattern": "^\\\\d{2}$",
            },
            "ministere_tutelle_libe": {
              "bsonType": "string",
            },
            "nature_uai": {
              "bsonType": "string",
              "pattern": "^\\\\d{3}$",
            },
            "nature_uai_libe": {
              "bsonType": "string",
            },
            "niveau_uai": {
              "bsonType": "string",
              "enum": [
                "1",
                "3",
                "2",
                "4",
              ],
            },
            "niveau_uai_libe": {
              "bsonType": "string",
              "enum": [
                "UAI célibataire",
                "UAI fille",
                "UAI mère",
                "UAI mère et fille",
              ],
            },
            "numero_finess_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_siren_siret_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_telecopieur_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_telephone_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_uai": {
              "bsonType": "string",
            },
            "patronyme_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "pays": {
              "bsonType": "string",
            },
            "pays_etranger_acheminement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "pays_libe": {
              "bsonType": "string",
            },
            "secteur_public_prive": {
              "bsonType": "string",
              "enum": [
                "PR",
                "PU",
              ],
            },
            "secteur_public_prive_libe": {
              "bsonType": "string",
              "enum": [
                "Privé",
                "Public",
              ],
            },
            "sigle_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "site_web": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "situation_comptable": {
              "bsonType": "string",
            },
            "situation_comptable_libe": {
              "bsonType": "string",
            },
            "source": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "tutelle_2": {
              "anyOf": [
                {
                  "bsonType": "string",
                  "pattern": "^\\\\d{2}$",
                },
                {
                  "bsonType": "null",
                },
              ],
            },
            "tutelle_2_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "type_uai": {
              "bsonType": "string",
            },
            "type_uai_libe": {
              "bsonType": "string",
            },
          },
          "required": [
            "nature_uai",
            "nature_uai_libe",
            "type_uai",
            "type_uai_libe",
            "etat_etablissement",
            "etat_etablissement_libe",
            "ministere_tutelle",
            "ministere_tutelle_libe",
            "tutelle_2",
            "tutelle_2_libe",
            "secteur_public_prive",
            "secteur_public_prive_libe",
            "sigle_uai",
            "categorie_juridique",
            "categorie_juridique_libe",
            "contrat_etablissement",
            "contrat_etablissement_libe",
            "categorie_financiere",
            "categorie_financiere_libe",
            "situation_comptable",
            "situation_comptable_libe",
            "niveau_uai",
            "niveau_uai_libe",
            "commune",
            "commune_libe",
            "academie",
            "academie_libe",
            "pays",
            "pays_libe",
            "departement_insee_3",
            "departement_insee_3_libe",
            "denomination_principale",
            "appellation_officielle",
            "patronyme_uai",
            "hebergement_etablissement",
            "hebergement_etablissement_libe",
            "numero_siren_siret_uai",
            "numero_finess_uai",
            "date_fermeture",
            "date_derniere_mise_a_jour",
            "lieu_dit_uai",
            "adresse_uai",
            "boite_postale_uai",
            "code_postal_uai",
            "etat_sirad_uai",
            "localite_acheminement_uai",
            "pays_etranger_acheminement",
            "numero_telephone_uai",
            "numero_telecopieur_uai",
            "mention_distribution",
            "mel_uai",
            "site_web",
            "coordonnee_x",
            "coordonnee_y",
            "appariement",
            "appariement_complement",
            "localisation",
            "localisation_complement",
            "date_geolocalisation",
            "source",
            "numero_uai",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "date_derniere_mise_a_jour": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_fermeture": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_ouverture": {
              "bsonType": "string",
            },
            "numero_uai": {
              "bsonType": "string",
            },
            "type_zone_uai": {
              "bsonType": "string",
            },
            "type_zone_uai_libe": {
              "bsonType": "string",
            },
            "zone": {
              "bsonType": "string",
            },
            "zone_libe": {
              "bsonType": "string",
            },
          },
          "required": [
            "numero_uai",
            "type_zone_uai",
            "type_zone_uai_libe",
            "zone",
            "zone_libe",
            "date_ouverture",
            "date_fermeture",
            "date_derniere_mise_a_jour",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "date_fermeture": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_ouverture": {
              "bsonType": "string",
            },
            "numero_uai": {
              "bsonType": "string",
            },
            "specificite_uai": {
              "bsonType": "string",
            },
            "specificite_uai_libe": {
              "bsonType": "string",
            },
          },
          "required": [
            "numero_uai",
            "specificite_uai",
            "specificite_uai_libe",
            "date_ouverture",
            "date_fermeture",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "academie": {
              "anyOf": [
                {
                  "bsonType": "string",
                  "pattern": "^\\\\d{2}$",
                },
                {
                  "bsonType": "null",
                },
              ],
            },
            "academie_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "adresse_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appariement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appariement_complement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appellation_officielle": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "boite_postale_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_financiere": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_financiere_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_juridique": {
              "bsonType": "string",
            },
            "categorie_juridique_libe": {
              "bsonType": "string",
            },
            "code_postal_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "commune": {
              "bsonType": "string",
            },
            "commune_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "contrat_etablissement": {
              "bsonType": "string",
              "enum": [
                "99",
                "10",
                "30",
                "20",
                "50",
                "31",
                "21",
                "!!",
                "40",
                "41",
              ],
            },
            "contrat_etablissement_libe": {
              "bsonType": "string",
              "enum": [
                "Sans objet",
                "Hors contrat",
                "Contrat d'association pour toutes les classes",
                "Contrat simple pour toutes les classes",
                "Reconnu par l'Etat",
                "Contrat d'association pour une partie des classes",
                "Contrat simple pour une partie des classes",
                "Inconnu du gestionnaire",
                "Contrats simple et d'association pour toutes les classes",
                "Contrats simple et d'association pour une partie des classes",
              ],
            },
            "coordonnee_x": {
              "bsonType": [
                "number",
                "null",
              ],
            },
            "coordonnee_y": {
              "bsonType": [
                "number",
                "null",
              ],
            },
            "date_derniere_mise_a_jour": {
              "bsonType": "string",
            },
            "date_fermeture": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_geolocalisation": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_ouverture": {
              "bsonType": "string",
            },
            "denomination_principale": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "departement_insee_3": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "departement_insee_3_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "etat_etablissement": {
              "bsonType": "string",
              "enum": [
                "1",
                "2",
                "3",
                "4",
              ],
            },
            "etat_etablissement_libe": {
              "bsonType": "string",
              "enum": [
                "Ouvert",
                "À fermer",
                "À ouvrir",
                "Fermé",
              ],
            },
            "etat_sirad_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "hebergement_etablissement": {
              "bsonType": "string",
            },
            "hebergement_etablissement_libe": {
              "bsonType": "string",
            },
            "lieu_dit_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localisation": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localisation_complement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localite_acheminement_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "mel_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "mention_distribution": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ministere_tutelle": {
              "bsonType": "string",
              "pattern": "^\\\\d{2}$",
            },
            "ministere_tutelle_libe": {
              "bsonType": "string",
            },
            "nature_uai": {
              "bsonType": "string",
              "pattern": "^\\\\d{3}$",
            },
            "nature_uai_libe": {
              "bsonType": "string",
            },
            "niveau_uai": {
              "bsonType": "string",
              "enum": [
                "1",
                "3",
                "2",
                "4",
              ],
            },
            "niveau_uai_libe": {
              "bsonType": "string",
              "enum": [
                "UAI célibataire",
                "UAI fille",
                "UAI mère",
                "UAI mère et fille",
              ],
            },
            "numero_finess_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_siren_siret_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_telecopieur_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_telephone_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_uai_mere": {
              "bsonType": "string",
            },
            "numero_uai_trouve": {
              "bsonType": "string",
            },
            "patronyme_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "pays": {
              "bsonType": "string",
            },
            "pays_etranger_acheminement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "pays_libe": {
              "bsonType": "string",
            },
            "secteur_public_prive": {
              "bsonType": "string",
              "enum": [
                "PR",
                "PU",
              ],
            },
            "secteur_public_prive_libe": {
              "bsonType": "string",
              "enum": [
                "Privé",
                "Public",
              ],
            },
            "sigle_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "site_web": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "situation_comptable": {
              "bsonType": "string",
            },
            "situation_comptable_libe": {
              "bsonType": "string",
            },
            "source": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "tutelle_2": {
              "anyOf": [
                {
                  "bsonType": "string",
                  "pattern": "^\\\\d{2}$",
                },
                {
                  "bsonType": "null",
                },
              ],
            },
            "tutelle_2_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "type_rattachement": {
              "bsonType": "string",
            },
            "type_uai": {
              "bsonType": "string",
            },
            "type_uai_libe": {
              "bsonType": "string",
            },
          },
          "required": [
            "nature_uai",
            "nature_uai_libe",
            "type_uai",
            "type_uai_libe",
            "etat_etablissement",
            "etat_etablissement_libe",
            "ministere_tutelle",
            "ministere_tutelle_libe",
            "tutelle_2",
            "tutelle_2_libe",
            "secteur_public_prive",
            "secteur_public_prive_libe",
            "sigle_uai",
            "categorie_juridique",
            "categorie_juridique_libe",
            "contrat_etablissement",
            "contrat_etablissement_libe",
            "categorie_financiere",
            "categorie_financiere_libe",
            "situation_comptable",
            "situation_comptable_libe",
            "niveau_uai",
            "niveau_uai_libe",
            "commune",
            "commune_libe",
            "academie",
            "academie_libe",
            "pays",
            "pays_libe",
            "departement_insee_3",
            "departement_insee_3_libe",
            "denomination_principale",
            "appellation_officielle",
            "patronyme_uai",
            "hebergement_etablissement",
            "hebergement_etablissement_libe",
            "numero_siren_siret_uai",
            "numero_finess_uai",
            "date_fermeture",
            "date_derniere_mise_a_jour",
            "lieu_dit_uai",
            "adresse_uai",
            "boite_postale_uai",
            "code_postal_uai",
            "etat_sirad_uai",
            "localite_acheminement_uai",
            "pays_etranger_acheminement",
            "numero_telephone_uai",
            "numero_telecopieur_uai",
            "mention_distribution",
            "mel_uai",
            "site_web",
            "coordonnee_x",
            "coordonnee_y",
            "appariement",
            "appariement_complement",
            "localisation",
            "localisation_complement",
            "date_geolocalisation",
            "source",
            "numero_uai_trouve",
            "numero_uai_mere",
            "type_rattachement",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "academie": {
              "anyOf": [
                {
                  "bsonType": "string",
                  "pattern": "^\\\\d{2}$",
                },
                {
                  "bsonType": "null",
                },
              ],
            },
            "academie_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "adresse_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appariement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appariement_complement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appellation_officielle": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "boite_postale_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_financiere": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_financiere_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_juridique": {
              "bsonType": "string",
            },
            "categorie_juridique_libe": {
              "bsonType": "string",
            },
            "code_postal_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "commune": {
              "bsonType": "string",
            },
            "commune_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "contrat_etablissement": {
              "bsonType": "string",
              "enum": [
                "99",
                "10",
                "30",
                "20",
                "50",
                "31",
                "21",
                "!!",
                "40",
                "41",
              ],
            },
            "contrat_etablissement_libe": {
              "bsonType": "string",
              "enum": [
                "Sans objet",
                "Hors contrat",
                "Contrat d'association pour toutes les classes",
                "Contrat simple pour toutes les classes",
                "Reconnu par l'Etat",
                "Contrat d'association pour une partie des classes",
                "Contrat simple pour une partie des classes",
                "Inconnu du gestionnaire",
                "Contrats simple et d'association pour toutes les classes",
                "Contrats simple et d'association pour une partie des classes",
              ],
            },
            "coordonnee_x": {
              "bsonType": [
                "number",
                "null",
              ],
            },
            "coordonnee_y": {
              "bsonType": [
                "number",
                "null",
              ],
            },
            "date_derniere_mise_a_jour": {
              "bsonType": "string",
            },
            "date_fermeture": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_geolocalisation": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_ouverture": {
              "bsonType": "string",
            },
            "denomination_principale": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "departement_insee_3": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "departement_insee_3_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "etat_etablissement": {
              "bsonType": "string",
              "enum": [
                "1",
                "2",
                "3",
                "4",
              ],
            },
            "etat_etablissement_libe": {
              "bsonType": "string",
              "enum": [
                "Ouvert",
                "À fermer",
                "À ouvrir",
                "Fermé",
              ],
            },
            "etat_sirad_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "hebergement_etablissement": {
              "bsonType": "string",
            },
            "hebergement_etablissement_libe": {
              "bsonType": "string",
            },
            "lieu_dit_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localisation": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localisation_complement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localite_acheminement_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "mel_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "mention_distribution": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ministere_tutelle": {
              "bsonType": "string",
              "pattern": "^\\\\d{2}$",
            },
            "ministere_tutelle_libe": {
              "bsonType": "string",
            },
            "nature_uai": {
              "bsonType": "string",
              "pattern": "^\\\\d{3}$",
            },
            "nature_uai_libe": {
              "bsonType": "string",
            },
            "niveau_uai": {
              "bsonType": "string",
              "enum": [
                "1",
                "3",
                "2",
                "4",
              ],
            },
            "niveau_uai_libe": {
              "bsonType": "string",
              "enum": [
                "UAI célibataire",
                "UAI fille",
                "UAI mère",
                "UAI mère et fille",
              ],
            },
            "numero_finess_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_siren_siret_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_telecopieur_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_telephone_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_uai_fille": {
              "bsonType": "string",
            },
            "numero_uai_trouve": {
              "bsonType": "string",
            },
            "patronyme_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "pays": {
              "bsonType": "string",
            },
            "pays_etranger_acheminement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "pays_libe": {
              "bsonType": "string",
            },
            "secteur_public_prive": {
              "bsonType": "string",
              "enum": [
                "PR",
                "PU",
              ],
            },
            "secteur_public_prive_libe": {
              "bsonType": "string",
              "enum": [
                "Privé",
                "Public",
              ],
            },
            "sigle_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "site_web": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "situation_comptable": {
              "bsonType": "string",
            },
            "situation_comptable_libe": {
              "bsonType": "string",
            },
            "source": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "tutelle_2": {
              "anyOf": [
                {
                  "bsonType": "string",
                  "pattern": "^\\\\d{2}$",
                },
                {
                  "bsonType": "null",
                },
              ],
            },
            "tutelle_2_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "type_rattachement": {
              "bsonType": "string",
            },
            "type_uai": {
              "bsonType": "string",
            },
            "type_uai_libe": {
              "bsonType": "string",
            },
          },
          "required": [
            "nature_uai",
            "nature_uai_libe",
            "type_uai",
            "type_uai_libe",
            "etat_etablissement",
            "etat_etablissement_libe",
            "ministere_tutelle",
            "ministere_tutelle_libe",
            "tutelle_2",
            "tutelle_2_libe",
            "secteur_public_prive",
            "secteur_public_prive_libe",
            "sigle_uai",
            "categorie_juridique",
            "categorie_juridique_libe",
            "contrat_etablissement",
            "contrat_etablissement_libe",
            "categorie_financiere",
            "categorie_financiere_libe",
            "situation_comptable",
            "situation_comptable_libe",
            "niveau_uai",
            "niveau_uai_libe",
            "commune",
            "commune_libe",
            "academie",
            "academie_libe",
            "pays",
            "pays_libe",
            "departement_insee_3",
            "departement_insee_3_libe",
            "denomination_principale",
            "appellation_officielle",
            "patronyme_uai",
            "hebergement_etablissement",
            "hebergement_etablissement_libe",
            "numero_siren_siret_uai",
            "numero_finess_uai",
            "date_fermeture",
            "date_derniere_mise_a_jour",
            "lieu_dit_uai",
            "adresse_uai",
            "boite_postale_uai",
            "code_postal_uai",
            "etat_sirad_uai",
            "localite_acheminement_uai",
            "pays_etranger_acheminement",
            "numero_telephone_uai",
            "numero_telecopieur_uai",
            "mention_distribution",
            "mel_uai",
            "site_web",
            "coordonnee_x",
            "coordonnee_y",
            "appariement",
            "appariement_complement",
            "localisation",
            "localisation_complement",
            "date_geolocalisation",
            "source",
            "numero_uai_trouve",
            "numero_uai_fille",
            "type_rattachement",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
  ],
}
`;

exports[`zodToMongoSchema > should convert users schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "api_key": {
      "bsonType": [
        "string",
        "null",
      ],
      "description": "Clé API",
    },
    "api_key_used_at": {
      "anyOf": [
        {
          "bsonType": "date",
        },
        {
          "bsonType": "null",
        },
      ],
      "description": "Date de dernière utilisation de la clé API",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email": {
      "bsonType": "string",
      "description": "Email de l'utilisateur",
    },
    "is_admin": {
      "bsonType": "bool",
    },
    "password": {
      "bsonType": "string",
      "description": "Mot de passe de l'utilisateur",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "email",
    "password",
    "is_admin",
    "api_key",
    "api_key_used_at",
    "updated_at",
    "created_at",
  ],
}
`;
